--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div style="text-align: center">
+      <img style="display: block; margin: 0 auto 20px auto; width: 200px" src="assets/images/main.gif" alt="Loading...">
+      <!--Serce the pajx bije dla Was!-->
+    </div>
+  </app-root>
 </body>
 </html>
