basic audio playing by YT API

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
   <title>MusicChallenge</title>
   <base href="/">
 
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+  <script src="https://npmcdn.com/bootstrap@4.0.0-alpha.5/dist/js/bootstrap.min.js"></script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -12,7 +16,7 @@
   <app-root>
     <div style="text-align: center">
       <img style="display: block; margin: 0 auto 20px auto; width: 200px" src="assets/images/main.gif" alt="Loading...">
-      <!--Serce the pajx bije dla Was!-->
+      Serce the pajx bije dla Was!
     </div>
   </app-root>
 </body>
